--- a/css/mui.css
+++ b/css/mui.css
@@ -304,7 +304,7 @@ a:active
 
 .mui-content
 {
-    background-color: #efeff4;
+    background-color: #EFEFF4;
 
     -webkit-overflow-scrolling: touch;
 }
